--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -20,70 +20,88 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <Button
             android:id="@+id/history_landing_pg"
-            android:layout_width="366dp"
+            android:layout_width="336dp"
             android:layout_height="155dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/mm_history"
-            android:gravity="center"
+            android:gravity="bottom|center"
             android:text="@string/history_button"
+            android:paddingBottom="10dp"
+            android:textSize="12dp"
+            android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/poi_landing_pg" />
 
         <Button
             android:id="@+id/poi_landing_pg"
-            android:layout_width="180dp"
+            android:layout_width="165dp"
             android:layout_height="152dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/mm_activities"
-            android:gravity="center"
+            android:gravity="bottom|center"
             android:text="@string/activities_button"
+            android:paddingBottom="10dp"
+            android:textSize="12dp"
+            android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toEndOf="@+id/food_landing_pg"
             app:layout_constraintTop_toTopOf="@+id/food_landing_pg" />
 
         <Button
             android:id="@+id/food_landing_pg"
-            android:layout_width="180dp"
+            android:layout_width="165dp"
             android:layout_height="152dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/mm_food"
-            android:gravity="center"
+            android:gravity="bottom|center"
             android:text="@string/food_button"
+            android:paddingBottom="10dp"
+            android:textSize="12dp"
+            android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="@+id/transport_landing_pg"
             app:layout_constraintTop_toBottomOf="@+id/transport_landing_pg" />
 
         <Button
             android:id="@+id/transport_landing_pg"
-            android:layout_width="180dp"
+            android:layout_width="165dp"
             android:layout_height="152dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/mm_transport"
-            android:gravity="center"
+            android:gravity="bottom|center"
             android:text="@string/transport_button"
+            android:paddingBottom="10dp"
+            android:textSize="12dp"
+            android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/hotel_landing_pg"
-            android:layout_width="180dp"
+            android:layout_width="165dp"
             android:layout_height="152dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/mm_hotel"
-            android:gravity="center"
+            android:gravity="bottom|center"
             android:text="@string/hotel_button"
+            android:paddingBottom="10dp"
+            android:textSize="12dp"
+            android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toEndOf="@+id/transport_landing_pg"
             app:layout_constraintTop_toTopOf="@+id/transport_landing_pg" />
