--- a/app/src/main/res/layout/buss_adapter_view.xml
+++ b/app/src/main/res/layout/buss_adapter_view.xml
@@ -11,7 +11,8 @@
         android:layout_height="30dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="TextView1" />
+        android:text="TextView1"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imageView_routes"
