--- a/app/src/main/res/layout/train_adapter_view.xml
+++ b/app/src/main/res/layout/train_adapter_view.xml
@@ -27,7 +27,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Station"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/trains"
